# test

./: .env  .pre-commit-config.yaml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  models.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: get_processed_data.py  process.py
backend/app/core/: config.py  database.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: bar-chart.tsx  dashboard-utils.tsx  data-table-view.tsx  icons.ts  navigation-menu.tsx  pie-chart.tsx  table-columns.tsx  upload.tsx
frontend/components/layout/: sidebar.tsx
frontend/components/ui/: command.tsx
frontend/constants/: index.ts
frontend/hooks/: index.ts
frontend/hooks/processed_data/: index.ts
frontend/libs/: utils.ts
frontend/types/: index.ts
