[tool.poetry]
name = "elt-application"
version = "0.1.0"
description = "interface"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
pandas = "^2.2.2"
numpy = "^2.1.0"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
